# P1CamPython

./: .appveyor.yml  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: conda.yml  pip.yml
conda.recipe/: meta.yaml
docs/: conf.py  index.rst  player_one_camera.rst
src/: CameraPython.cpp  P1Cam.cpp  P1Cam.h
tests/: example_basic.py  test_basic.py
